@@ -1,4 +1,30 @@
+# -*- coding: utf-8 -*-
+# Copyright (C) 2014-2020, Luis Pedro Coelho <luis@luispedro.org>
+# vim: set ts=4 sts=4 sw=4 expandtab smartindent:
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+#  of this software and associated documentation files (the "Software"), to deal
+#  in the Software without restriction, including without limitation the rights
+#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+#  copies of the Software, and to permit persons to whom the Software is
+#  furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in
+#  all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+#  THE SOFTWARE.
+
 from sys import exit
+import typing
+
+Number = typing.Union[int, float]
+
 def exit_if_file_exists(fname):
     '''Before each task execute, check if file exists. If so, exit.
 
@@ -17,7 +43,7 @@ def exit_if_file_exists(fname):
             exit(0)
     hooks.register_hook('execute.task-pre-execute', check_file)
 
-def exit_when_true(f, function_takes_Task=False):
+def exit_when_true(f : typing.Callable, function_takes_Task: bool = False):
     '''Generic exit check.
     
     After each task, call function ``f`` and exit if it return true.
@@ -39,7 +65,7 @@ def exit_when_true(f, function_takes_Task=False):
     hooks.register_hook('execute.task-executed1', exit_when)
 
 
-def exit_after_n_tasks(n):
+def exit_after_n_tasks(n : int):
     '''Exit after a specific number of tasks have been executed
 
     Parameters
@@ -59,7 +85,7 @@ def exit_after_n_tasks(n):
     hooks.register_hook('execute.task-executed1', exit_after)
 
 
-def exit_after_time(hours=0, minutes=0, seconds=0):
+def exit_after_time(hours: Number = 0, minutes: Number = 0, seconds: Number = 0):
     '''Exit after a specific number of tasks have been executed
 
     Note that this only checks the time **after each task has finished
