@@ -43,8 +43,6 @@ classifiers = [
 'Operating System :: OS Independent',
 'Programming Language :: Python',
 'Programming Language :: Python :: 3',
-'Programming Language :: Python :: 3.3',
-'Programming Language :: Python :: 3.4',
 'Programming Language :: Python :: 3.5',
 'Programming Language :: Python :: 3.6',
 'Programming Language :: Python :: 3.7',
